# serializer version: 1
# name: TestQuadXTrackingCostEqual.test_snapshot
  -0.0069351736759
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.1
  0.0037692818654
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.10
  -3.69e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.100
  3.102044e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.101
  -0.0006525401557
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.102
  0.9411647838043
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.103
  -2.3366309591134
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.104
  -0.3117343460441
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.105
  -0.8117999558004
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.106
  0.7414119910789
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.107
  0.5063450423535
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.108
  0.9572999044336
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.109
  0.624359085909
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.11
  1.38406e-08
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.110
  0.6839303641214
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.111
  0.1175373974578
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.112
  -0.9930684569549
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.113
  1.0117766126774
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.114
  -0.1175063770179
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.115
  0.9924159167992
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.116
  -0.0706118288731
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.117
  1.0018398729004
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.118
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.12
  0.9681230039198
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.120
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.1175374 , -0.99306846,  1.01177661]),
    'reference_error': array([-0.11750638,  0.99241592, -0.07061183]),
    'state_of_interest': array([ 3.10204400e-05, -6.52540156e-04,  9.41164784e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.121
  0.1985273951894
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.122
  4.5686139871871
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.123
  -0.9599555563814
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.124
  -0.0448037602419
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.125
  0.0362947066813
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.126
  0.0205825096141
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.127
  0.9981240792773
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.128
  -0.0141643990536
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.129
  0.053253237589
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.130
  0.5710862120817
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.131
  0.0006174694945
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.132
  0.0015863766127
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.133
  0.9547376832806
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.134
  0.9039312087065
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.135
  2.0279710262249
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.136
  -0.3555390745231
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.137
  0.1817909774278
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.138
  0.4062014760722
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.139
  0.1213915432492
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.140
  0.4099264689175
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.141
  0.4155092116959
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.142
  0.1564344650402
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.143
  -0.9876883405951
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.144
  1.0156976298823
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.145
  -0.1558169955457
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.146
  0.9892747172078
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.147
  -0.0609599466017
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.148
  1.0033242333848
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.149
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.150
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.151
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.15643447, -0.98768834,  1.01569763]),
    'reference_error': array([-0.155817  ,  0.98927472, -0.06095995]),
    'state_of_interest': array([6.17469495e-04, 1.58637661e-03, 9.54737683e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.152
  1.983163821378
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.153
  -8.0344102629952
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.154
  4.7269254335243
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.155
  -0.0323298570083
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.156
  -0.0023236187097
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.157
  0.0491973151918
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.158
  0.9982629940651
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.159
  0.0695559486595
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.160
  0.0891809110792
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.161
  0.7495903619079
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.162
  0.0016296283897
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.163
  0.0047251255483
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.164
  0.9709428331893
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.165
  0.3429663317734
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.166
  -2.7406170076915
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.167
  2.0585673660378
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.168
  0.5053315192977
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.169
  0.452048803102
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.17
  0.0506245972388
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.170
  0.5174469313319
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.171
  0.4086891975916
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.172
  0.5906925375778
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.173
  0.1950903220161
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.174
  -0.9807852804032
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.175
  1.019614773932
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.176
  -0.1934606936264
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.177
  0.9855104059516
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.178
  -0.0486719407427
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.179
  1.0054982635653
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.18
  0.0513790145841
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.180
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.181
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.182
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.19509032, -0.98078528,  1.01961477]),
    'reference_error': array([-0.19346069,  0.98551041, -0.04867194]),
    'state_of_interest': array([0.00162963, 0.00472513, 0.97094283]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.19
  0.0490249299439
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.2
  0.002386653325
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.20
  0.0491542963773
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.21
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.22
  -1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.23
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.24
  -3.69e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.25
  1.0000000138406
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.26
  -0.0318769960802
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.27
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0., -1.,  1.]),
    'reference_error': array([-3.69000000e-09,  1.00000001e+00, -3.18769961e-02]),
    'state_of_interest': array([-3.69000000e-09,  1.38406000e-08,  9.68123004e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.28
  3.2895340551373
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.29
  -1.3105497173483
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.3
  -0.0001300738807
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.30
  4.4186327040189
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.31
  0.0213006048957
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.32
  -0.0097814685828
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.33
  0.0263381088701
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.34
  0.9993782622834
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.35
  -0.0154156057975
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.36
  -0.0309733033623
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.37
  -0.6897032447096
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.38
  -6.0897839e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.39
  -1.10615693e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.4
  -6.3954586e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.40
  0.9488097130593
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.41
  1.7213166190998
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.42
  -0.3840380893018
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.43
  2.2531371815724
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.44
  0.5578944232475
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.45
  0.4806253622626
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.46
  0.5172942681555
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.47
  0.5334138140553
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.48
  0.5837203338329
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.49
  0.0392598157591
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.5
  2.86814748e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.50
  -0.9992290362407
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.51
  1.003926829328
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.52
  -0.039265905543
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.53
  0.9992179746714
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.54
  -0.0551171162687
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.55
  1.0015069988524
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.56
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.57
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.58
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.03925982, -0.99922904,  1.00392683]),
    'reference_error': array([-0.03926591,  0.99921797, -0.05511712]),
    'state_of_interest': array([-6.08978390e-06, -1.10615693e-05,  9.48809713e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.59
  -8.0598131636607
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.6
  0.9999999911086
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.60
  5.139465908215
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.61
  -1.5578794533837
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.62
  -0.020866286156
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.63
  0.0243788877788
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.64
  0.0437644494288
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.65
  0.9985263846784
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.66
  -0.0038828869997
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.67
  -0.0265475514897
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.68
  -0.1897177635193
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.69
  -0.0001972029071
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.7
  -9.9551621e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.70
  -0.0005289307186
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.71
  0.9383557591908
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.72
  -2.549858925073
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.73
  2.9884233715703
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.74
  1.640789138667
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.75
  0.6288514442216
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.76
  0.6027801403983
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.77
  0.6646610124649
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.78
  0.7425534599665
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.79
  0.526027133025
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.8
  0.0001994865136
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.80
  0.0784590957278
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.81
  -0.9969173337331
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.82
  1.0078526897695
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.83
  -0.078656298635
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.84
  0.9963884030145
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.85
  -0.0694969305787
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.86
  1.0019014354399
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.87
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.88
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.89
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
    'reference': array([ 0.0784591 , -0.99691733,  1.00785269]),
    'reference_error': array([-0.0786563 ,  0.9963884 , -0.06949693]),
    'state_of_interest': array([-1.97202907e-04, -5.28930719e-04,  9.38355759e-01]),
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.9
  -0.7634914967113
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.90
  0.9553017462728
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.91
  -3.7336875384156
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.92
  -0.3456893481411
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.93
  -0.077978808273
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.94
  -0.0021355289228
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.95
  0.0400764061926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.96
  0.9961468900936
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.97
  0.0266489985275
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.98
  -0.0184908953787
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.99
  0.36523366286
# ---
